--- a/Application/iSynaptic.Commons/ActionExtensions.tt
+++ b/Application/iSynaptic.Commons/ActionExtensions.tt
@@ -12,70 +12,73 @@ using System.Threading;
 
 namespace iSynaptic.Commons
 {
-	public static partial class ActionExtensions
-	{
-		<# foreach(var i in Enumerable.Range(1, 16))
-		{
-			string typeArgs = Delimit(Enumerable.Range(1, i), ", ", x => "T" + x.ToString());
-			string args = Delimit(Enumerable.Range(1, i), ", ", x => "t" + x.ToString());
-
-			string reverseTypeArgs = Delimit(Enumerable.Range(1, i).Reverse(), ", ", x => "T" + x.ToString());
-			string reverseArgs = Delimit(Enumerable.Range(1, i).Reverse(), ", ", x => "t" + x.ToString());
-
-			string curriedTypeArgs = Delimit(Enumerable.Range(1, i).Skip(1), ", ", x => "T" + x.ToString());
-			string curriedArgs = Delimit(Enumerable.Range(1, i).Skip(1), ", ", x => "t" + x.ToString());
-	    #>
-
-		<# if(i > 1) { #>
-
-		public static Action<<#= reverseTypeArgs #>> Flip<<#= typeArgs #>>(this Action<<#= typeArgs #>> self)
+    public static partial class ActionExtensions
+    {
+        <# foreach(var i in Enumerable.Range(1, 16))
         {
-            Guard.NotNull(self, "self");
-            return (<#= reverseArgs #>) => self(<#= args #>);
+            string typeArgs = Delimit(Enumerable.Range(1, i), ", ", x => "T" + x.ToString());
+            string args = Delimit(Enumerable.Range(1, i), ", ", x => "t" + x.ToString());
+
+            string reverseTypeArgs = Delimit(Enumerable.Range(1, i).Reverse(), ", ", x => "T" + x.ToString());
+            string reverseArgs = Delimit(Enumerable.Range(1, i).Reverse(), ", ", x => "t" + x.ToString());
+
+            string curriedTypeArgs = Delimit(Enumerable.Range(1, i).Skip(1), ", ", x => "T" + x.ToString());
+            string curriedArgs = Delimit(Enumerable.Range(1, i).Skip(1), ", ", x => "t" + x.ToString());
+        #>
+
+        <# if(i > 1) { #>
+
+        public static Action<<#= reverseTypeArgs #>> Flip<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this)
+        {
+            Guard.NotNull(@this, "@this");
+            return (<#= reverseArgs #>) => @this(<#= args #>);
         }
 
-		public static Action<<#= curriedTypeArgs #>> Curry<<#= typeArgs #>>(this Action<<#= typeArgs #>> self, T1 t1)
+        public static Action<<#= curriedTypeArgs #>> Curry<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this, T1 t1)
         {
-            Guard.NotNull(self, "self");
-            return (<#= curriedArgs #>) => self(t1, <#= curriedArgs #>);
+            Guard.NotNull(@this, "@this");
+            return (<#= curriedArgs #>) => @this(t1, <#= curriedArgs #>);
         }
 
-		<# } #>
+        <# } #>
 
-		public static Action<<#= typeArgs #>> MakeConditional<<#= typeArgs #>>(this Action<<#= typeArgs #>> self, Func<<#= typeArgs #>, bool> condition)
+        public static Action<<#= typeArgs #>> MakeConditional<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this, Func<<#= typeArgs #>, bool> condition)
         {
-            return MakeConditional(self, condition, null);
+            Guard.NotNull(@this, "@this");
+            Guard.NotNull(condition, "condition");
+
+            return MakeConditional(@this, condition, null);
         }
 
-        public static Action<<#= typeArgs #>> MakeConditional<<#= typeArgs #>>(this Action<<#= typeArgs #>> self, Func<<#= typeArgs #>, bool> condition, Action<<#= typeArgs #>> falseAction)
+        public static Action<<#= typeArgs #>> MakeConditional<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this, Func<<#= typeArgs #>, bool> condition, Action<<#= typeArgs #>> falseAction)
         {
-            Guard.NotNull(self, "self");
+            Guard.NotNull(@this, "@this");
             Guard.NotNull(condition, "condition");
 
             return (<#= args #>) =>
             {
                 if (condition(<#= args #>))
-                    self(<#= args #>);
+                    @this(<#= args #>);
                 else if (falseAction != null)
                     falseAction(<#= args #>);
             };
         }
 
-		public static Action<<#= typeArgs #>> FollowedBy<<#= typeArgs #>>(this Action<<#= typeArgs #>> self, Action<<#= typeArgs #>> followedBy)
+        public static Action<<#= typeArgs #>> FollowedBy<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this, Action<<#= typeArgs #>> followedBy)
         {
-            if (self == null || followedBy == null)
-                return self ?? followedBy;
+            if (@this == null || followedBy == null)
+                return @this ?? followedBy;
 
             return (<#= args #>) =>
             {
-                self(<#= args #>);
+                @this(<#= args #>);
                 followedBy(<#= args #>);
             };
         }
 
-        public static Action<<#= typeArgs #>> MakeIdempotent<<#= typeArgs #>>(this Action<<#= typeArgs #>> self)
+        public static Action<<#= typeArgs #>> MakeIdempotent<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this)
         {
-            Guard.NotNull(self, "self");
+            Guard.NotNull(@this, "@this");
 
             int beenExecuted = 0;
 
@@ -84,31 +87,32 @@ namespace iSynaptic.Commons
                 int previousValue = Interlocked.CompareExchange(ref beenExecuted, 1, 0);
 
                 if(previousValue == 0)
-				{
-                    self(<#= args #>);
-					self = null;
-				}
+                {
+                    @this(<#= args #>);
+                    @this = null;
+                }
             };
         }
 
-		public static Action<<#= typeArgs #>> CatchExceptions<<#= typeArgs #>>(this Action<<#= typeArgs #>> self)
+        public static Action<<#= typeArgs #>> CatchExceptions<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this)
         {
-            return self.CatchExceptions(null);
+            Guard.NotNull(@this, "@this");
+            return @this.CatchExceptions(null);
         }
 
-        public static Action<<#= typeArgs #>> CatchExceptions<<#= typeArgs #>>(this Action<<#= typeArgs #>> self, ICollection<Exception> exceptions)
+        public static Action<<#= typeArgs #>> CatchExceptions<<#= typeArgs #>>(this Action<<#= typeArgs #>> @this, ICollection<Exception> exceptions)
         {
-            Guard.NotNull(self, "self");
+            Guard.NotNull(@this, "@this");
 
             return (<#= args #>) =>
             {
-                Action innerAction = () => self(<#= args #>);
+                Action innerAction = () => @this(<#= args #>);
                 innerAction = innerAction.CatchExceptions(exceptions);
 
                 innerAction();
             };
         }
 
-		<# } #>
-	}
+        <# } #>
+    }
 }
